--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,24 @@
 <resources>
     <string name="app_name">To Do App</string>
-    <string name="password">hasło</string>
-    <string name="email">adres e-mail</string>
-    <string name="login_button_label">Zaloguj</string>
-    <string name="login_text">Zaloguj!</string>
-    <string name="sign_up_text">Zarejestruj!</string>
-    <string name="sign_up_button_label">Zarejestruj</string>
+    <string name="password">password</string>
+    <string name="email">e-mail</string>
+    <string name="login_button_label">Sign In</string>
+    <string name="login_text">Sign In!</string>
+    <string name="sign_up_text">Sign Up!</string>
+    <string name="sign_up_button_label">Sign Up</string>
     <string name="title_activity_basic">BasicActivity</string>
 
-    <string name="add_item">Dodaj nowe</string>
+    <string name="add_item">Add New</string>
 
-    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
+    <string name="signup_error_message">Check your e-mail or password!</string>
     <string name="signup_error_title">Error!</string>
-    <string name="signup_success">Account successfully created! You can now Login.</string>
-    <string name="login_error_message">Please make sure you enter an email address and password!</string>
+    <string name="signup_success">Signup successfull. You can now login.</string>
+    <string name="password_weak_message">Password must contains at least 6 characters.</string>
+
+    <string name="login_error_message">Check your e-mail or password!</string>
     <string name="login_error_title">Error!</string>
 
-    <string name="action_logout">Wyloguj</string>
+    <string name="action_logout">Log Out</string>
 
     <string name="action_settings">Settings</string>
 
