--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,9 @@
     <string name="action_logout">Log Out</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_item">ItemActivity</string>
+
+    <string name="action_export">Export</string>
+
 
 </resources>
